# utlose-init

./: README.md  cabal.project
docs/plan/: Makefile  Proposal.bib  Proposal.tex
utloseadm/: CHANGELOG.md  LICENSE  utloseadm.cabal
utloseadm/app/: CLI.hs  Main.hs
utloseadm/app/CLI/: Commands.hs  Types.hs
utloseadm/app/CLI/Commands/: Boot.hs  Disable.hs  Enable.hs  Lint.hs  Logs.hs  Managment.hs  Patch.hs  Query.hs  Revert.hs  Snap.hs  Status.hs
utlosed/: CHANGELOG.md  utlosed.cabal
utlosed/app/: Main.hs
utlosed/lib/System/: Utlose.hs
utlosed/lib/System/Utlose/: Configuration.hs
utlosed/lib/System/Utlose/Configuration/: Types.hs
