cabal-version:      2.4
name:               utloseadm
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Frontend for managing an utløse system

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
license-file:       LICENSE
author:             James Hobson
maintainer:         james.hobson@jotron.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable utloseadm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
