cabal-version:      2.4
name:               utlosed
version:            0.1.0.0
synopsis:           Research init system for the BSDs

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             James Hobson
maintainer:         james@hobson.space

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  System.Utlose
                      System.Utlose.Configuration
                      System.Utlose.Configuration.Types

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base < 5.0,
                      ip,
                      tomland,
                      text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable utlosed
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base < 5.0,
        utlosed,
        mtl,
        text

    hs-source-dirs:   app
    default-language: Haskell2010
